--- a/Group6.html
+++ b/Group6.html
@@ -410,247 +410,22 @@
             </div>
         </div>
 
+
+        <div class="section">
+            
+        </div>
+        
         <div class="section">
             <iframe src="Elika_policytimeline.html" width="100%" height="85%" style="border:none;"></iframe>
         </div>
 
         <div class="section">
-
-            <div class="text">
-                <h3 style="font-size: 28px; line-height: 1.5em;"><b>Total Policy Investment</b></h3>
-                <p style="font-size: 18px; line-height: 2em;">in Billion USD</p>
-                <p style="font-size: 14px; line-height: 1.25em;">Policies are classified by the policy tracker under
-                    'clean conditional' if they state support away from fossil fuels, but are not necessarily
-                    specific
-                    regarding the implementation of appropriate sustainable counterparts. 'Clean Unconditional'
-                    refers
-                    to potentially clean clean, sustainable policies that are in support of
-                    production or consumption of energy in a low-carbon process having negligible effect on the
-                    environment. 'Fossil Condition' are policies that support the production and consumption of
-                    fossil fuels (oil, gas, coal, or fossil fuel based electricity). 'Fossil Unconditional' are
-                    policies
-                    that support production and consumption of fossil fuels without any
-                    sustainability targets. 'Other Energy' are policies outside the above but falling under an
-                    umbrella
-                    cateogy (such as nuclear power, uranium mining).</p>
-                <p style="font-size: 14px; line-height: 1.25em;">The graph displays that investments towards energy
-                    has
-                    been more in 2020 than the two consecutive years.
-                    Although, 'clean conditional' (individually) shows an upward trend in 2022 and 'other energy'
-                    has
-                    garnered much investment in 2021; the overall
-                    trend is downwards.</p>
-            </div>
-
-            <div id="main1" class="chart1">
-
-                <script>
-
-                    var chartDom1 = document.getElementById('main1');
-                    var myChart1 = echarts.init(chartDom1);
-                    var option1;
-
-                    option1 = {
-                        title: {
-                            text: ''
-                        },
-                        tooltip: {
-                            trigger: 'axis',
-                            axisPointer: {
-                                type: 'cross',
-                                label: {
-                                    backgroundColor: ''
-                                }
-                            }
-                        },
-                        legend: {
-                            data: ['clean conditional', 'clean unconditional', 'fossil conditional', 'fossil unconditional', 'other energy']
-                        },
-                        toolbox: {
-                            feature: {
-
-                            }
-                        },
-                        grid: {
-                            left: '3%',
-                            right: '4%',
-                            bottom: '3%',
-                            containLabel: true
-                        },
-                        xAxis: [
-                            {
-                                type: 'category',
-                                boundaryGap: false,
-                                data: ['2020', '2021', '2022']
-                            }
-                        ],
-                        yAxis: [
-                            {
-                                type: 'value'
-                            }
-                        ],
-                        series: [
-                            {
-                                name: 'clean conditional',
-                                type: 'line',
-                                stack: 'Total',
-                                smooth: true,
-                                lineStyle: {
-                                    width: 0
-                                },
-                                showSymbol: false,
-                                color: 'mediumaquamarine',
-                                areaStyle: {},
-                                emphasis: {
-                                    focus: 'series'
-                                },
-                                data: [8768.6,
-                                    480.8,
-                                    0]
-                            },
-                            {
-                                name: 'clean unconditional',
-                                type: 'line',
-                                stack: 'Total',
-                                smooth: true,
-                                lineStyle: {
-                                    width: 0
-                                },
-                                showSymbol: false,
-                                color: 'mediumslateblue',
-                                areaStyle: {},
-                                emphasis: {
-                                    focus: 'series'
-                                },
-                                data: [825.5,
-                                    48.3,
-                                    183]
-                            },
-                            {
-                                name: 'fossil conditional',
-                                type: 'line',
-                                stack: 'Total',
-                                smooth: true,
-                                lineStyle: {
-                                    width: 0
-                                },
-                                showSymbol: false,
-                                color: 'orange',
-                                areaStyle: {},
-                                emphasis: {
-                                    focus: 'series'
-                                },
-                                data: [505,
-                                    31.2,
-                                    0]
-                            },
-                            {
-                                name: 'fossil unconditional',
-                                type: 'line',
-                                stack: 'Total',
-                                smooth: true,
-                                lineStyle: {
-                                    width: 0
-                                },
-                                showSymbol: false,
-                                color: 'salmon',
-                                areaStyle: {},
-                                emphasis: {
-                                    focus: 'series'
-                                },
-                                data: [103180,
-                                    2139.6,
-                                    0,]
-                            },
-                            {
-                                name: 'other energy',
-                                type: 'line',
-                                stack: 'Total',
-                                smooth: true,
-                                lineStyle: {
-                                    width: 0
-                                },
-                                showSymbol: false,
-                                color: 'lightskyblue',
-                                areaStyle: {},
-                                emphasis: {
-                                    focus: 'series'
-                                },
-                                data: [2265.2,
-                                    3100.8,
-                                    9.1]
-                            }
-                        ]
-                    };
-
-                    option1 && myChart1.setOption(option1);
-
-                </script>
-            </div>
-
+            <iframe src="Elika_investmentsector.html" width="100%" height="100%" style="border:none;"></iframe>
         </div>
+
         <div class="section">
-
-            <div class="text">
-                <h3 style="font-size: 28px; line-height: 1.5em;"><b>Policy Investment by Energy Type</b></h3>
-                <p style="font-size: 18px; line-height: 2em;">in Billion USD</p>
-                <p style="font-size: 14px; line-height: 1.25em;">Despite various investments towards sustainable
-                    forms of energy- coal, oil and gas also had major policy investment in 2020. Investment in 2021 is towards hydro 
-                    (water) as a power source, where other energy production investments have been decreased. These investments contradict the sustainble rhetoric.
-                </p>
-            </div>
-
-            <div id="main2" class="chart2">
-
-                <script>
-
-
-                    var chartDom2 = document.getElementById('main2');
-                    var myChart2 = echarts.init(chartDom2);
-                    var option2;
-
-                    option2 = {
-                        title: {
-                            text: ''
-                        },
-                        legend: {
-                            data: ['2020', '2021', '2022']
-                        },
-                        radar: {
-                            // shape: 'circle',
-                            indicator: [
-                                { name: 'Hydrogen', max: 125000 },
-                                { name: 'Hydro', max: 125000 },
-                                { name: 'Nuclear', max: 125000 },
-                                { name: 'Solar', max: 125000 },
-                                { name: 'Wind', max: 125000 },
-                                { name: 'Coal', max: 125000 },
-                                { name: 'Oil and Gas', max: 125000 }
-                            ]
-                        },
-                        series: [
-                            {
-                                name: 'Investment by Year',
-                                type: 'radar',
-                                color: ['dodgerblue', 'violet'],
-                                data: [
-                                    {
-                                        value: [106261.2, 95, 2701.7, 110304.20, 116034.70, 116034.7, 114297],
-                                        name: '2020',
-                                    },
-                                    {
-                                        value: [16280, 106146.30, 1, 7501, 8414.8, 13006.9, 15630.4],
-                                        name: '2021'
-                                    }
-                                ]
-                            }
-                        ]
-                    };
-
-                    option2 && myChart2.setOption(option2);
-
-                </script>
-            </div>
+            <iframe src="Elika_investmentfueltype.html" width="100%" height="100%" style="border:none;"></iframe>
+        </div>
 
         </div>
         <div class="section">
