--- a/Group6.html
+++ b/Group6.html
@@ -412,7 +412,19 @@
 
 
         <div class="section">
-            
+            <div class="header">
+            <h3 style="font-size: 30px">Policy Investment by Sector</h3>
+            <p style="font-size: 24px"> in Billion USD</p>
+            <p style="font-size: 14px">Policies are classified by the policy tracker under 'clean conditional' if they state support away from fossil fuels, but are not necessarily specific 
+            regarding the implementation of appropriate sustainable counterparts. 'Clean Unconditional' refers to potentially clean, sustainable policies that are in support of 
+            production or consumption of energy in a low-carbon process having negligible effect on the environment. 'Fossil Condition' are policies that support the production and consumption of 
+            fossil fuels (oil, gas, coal, or fossil fuel based electricity). 'Fossil Unconditional' are policies that support production and consumption of fossil fuels without any 
+            sustainability targets. 'Other Energy' are policies outside the above but falling under an umbrella category (such as nuclear power, uranium mining).</p>
+            <p style="font-size: 16px">The graph displays that investments towards energy has been more in 2020 than the two consecutive years. 
+            Although, 'clean conditional' (individually) shows an upward trend in 2022 and 'other energy' has garnered much investment in 2021; the overall
+            trend is downwards.
+            </p>
+            </div>
         </div>
         
         <div class="section">
@@ -426,8 +438,7 @@
         <div class="section">
             <iframe src="Elika_investmentfueltype.html" width="100%" height="100%" style="border:none;"></iframe>
         </div>
-
-        </div>
+ 
         <div class="section">
             <div class="header">
                 <h3 style="font-size: 30px; padding-top: 0px; line-height: 1.25em;">Key Policies</h3>
