--- a/Elika_policypage.html
+++ b/Elika_policypage.html
@@ -30,10 +30,11 @@
       .text {
       margin: 100px; 
       font-size: 20px;
-      position: relative;   
-      text-align: center; 
-      padding-right: 200px;
-      padding-left: 200px;
+      position: relative;  
+      float: right; 
+      text-align: justify; 
+      padding-right: 25px;
+      padding-left: 850px;
       padding-bottom: 0px;
       color: rgb(49, 48, 48); 
       }    
@@ -42,7 +43,7 @@
       position: relative; 
       padding-top: 0px;
       padding-right: 200px;
-      padding-left: 200px;
+      padding-left: 25px;
       width: 800px;
       height: 600px;
       font-family: Gill Sans, 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
@@ -52,7 +53,7 @@
       position: relative; 
       padding-top: 0px;
       padding-right: 200px;
-      padding-left: 200px; 
+      padding-left: 25px; 
       width: 800px;
       height: 600px;
       font-family: Gill Sans, 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
@@ -274,18 +275,27 @@
   <p style="font-size: 14px;padding-bottom: 130px;">To note: the tracker only displays initial investment to new policy.</p>
   </div>
 
+  <div class="header">
+    <h1>Charting the World's rhetoric towards Energy</h1> 
+    <p style="font-size:24px;">This section looks at the trends of policy decisions taken by G20 governments</p>
+    <p style="font-size: 18px;">Capturing essential policies with news reels to follow</p> 
+  </div>
+
+  <div id="map">
+    <iframe src="Elika_policytimeline.html" width="100%" height="95%" frameBorder="0"></iframe>
+  </div>
+
   <div class="text">
-    <h3 style="font-size: 30px">Total Policy Investment</h3>
+    <h3 style="font-size: 30px">Policy Investment by Sector</h3>
     <p style="font-size: 24px"> in Billion USD</p>
     <p style="font-size: 14px">Policies are classified by the policy tracker under 'clean conditional' if they state support away from fossil fuels, but are not necessarily specific 
-    regarding the implementation of appropriate sustainable counterparts. 'Clean Unconditional' refers to potentially clean clean, sustainable policies that are in support of 
+    regarding the implementation of appropriate sustainable counterparts. 'Clean Unconditional' refers to potentially clean, sustainable policies that are in support of 
     production or consumption of energy in a low-carbon process having negligible effect on the environment. 'Fossil Condition' are policies that support the production and consumption of 
     fossil fuels (oil, gas, coal, or fossil fuel based electricity). 'Fossil Unconditional' are policies that support production and consumption of fossil fuels without any 
-    sustainability targets. 'Other Energy' are policies outside the above but falling under an umbrella cateogy (such as nuclear power, uranium mining).</p>
+    sustainability targets. 'Other Energy' are policies outside the above but falling under an umbrella category (such as nuclear power, uranium mining).</p>
     <p style="font-size: 16px">The graph displays that investments towards energy has been more in 2020 than the two consecutive years. 
       Although, 'clean conditional' (individually) shows an upward trend in 2022 and 'other energy' has garnered much investment in 2021; the overall
       trend is downwards.
-
     </p>
   </div>
 
@@ -497,10 +507,10 @@
 
     </div>
 
-    <div class="text">
-      <h3 style="font-size: 30px">Key Policies</h3>
-      <p style="font-size: 24px">in specific conuntries</p>
-      <p style="font-size: 16px">This policy overview captures a number of policies in the countries (Germany, China, India, UK and the US) as they push towards an equitable/ non-equitable energy outlook, 
+    <div class="header">
+      <h3 style="font-size: 30px; padding-top: 10px">Key Policies</h3>
+      <p style="font-size: 24px">in Germany, China, India, UK, USA</p>
+      <p style="font-size: 16px; padding-bottom: 350px;">This policy overview captures a number of policies in the countries (Germany, China, India, UK and the US) as they push towards an equitable/ non-equitable energy outlook, 
         committing to important legislations that attempt to adjust the past narrative
       </p>
     </div>
@@ -518,57 +528,66 @@
         </div>
         <div class="swiper-slide" style="background-color: coral;" data-year="Germany">
           <div class="swiper-slide-content"><span class="timeline-year">2020</span>
-            <h4 class="timeline-title">Modernization of buildings</h4>
-            <p class="timeline-text">for energy efficiency (economic stimulus package) to increase energy efficiency of buildings</p> 
-            <h4 class="timeline-title">Regulatory measures</h4> 
-            <p class="timeline-text">To further promote the expansion of renewable energies</p>
+            <h4 class="timeline-title">Climate Change Strategy</h4>
+            <p class="timeline-text">Germany’s national climate change strategy is defined in the Climate Action Plan 2050, which sets out a longer-term pathway 
+              for sector-specific emissions reductions, as part of the Energiewende. Compared with the base year of 1990, the key goals are to achieve at least a 
+              40% cut in greenhouse gas (GHG) emissions by 2020, 55% by 2030, 70% by 2040 and 80-95% by 2050, at which point the country expects to be mostly 
+              GHG-neutral. These targets are complemented with short- and medium-term targets for energy consumption and energy efficiency, and renewable energy 
+              supply.</p>
             <span class="timeline-year">2021</span>
-            <h4 class="timeline-title">Germany and Saudi Arabia sign Declaration of Intent</h4>
-            <p class="timeline-text">to cooperate on green hydrogen to drive forward Germany's National Hydrogen Mission</p>   
+            <h4 class="timeline-title">Energiewende</h4>
+            <p class="timeline-text">The “Energiewende" continues to be the defining feature of Germany’s energy policy landscape. In place for nearly a decade, 
+              the Energiewende is a major plan for transforming the country’s energy system to make it more efficient and supplied mainly by renewable sources. 
+              The Energiewende is clearly visible in electricity generation, where it has increased the share of renewables.</p> 
+              <p class="timeline-text" style="font-size: 10px;">Source <a href="https://www.iea.org">IEA</a></p>  
           </div>
         </div>
         <div class="swiper-slide" style="background-color: orchid;" data-year="China">
-          <div class="swiper-slide-content"><span class="timeline-year">2021</span>
-            <h4 class="timeline-title">Biomass power generation projects</h4>
-            <p class="timeline-text">To manage the construction and operation of biomass power generation projects and arrange central government's new biomass power generation subsidy funds and promote the sustainable and healthy</p>
-            <h4 class="timeline-title">Energy security</h4>
-            <p class="timeline-text">PipeChina invests CNY 24.45bn to boost natural gas supplies</p>
+          <div class="swiper-slide-content"><span class="timeline-year">2020-present</span>
+            <h4 class="timeline-title">Energy Plans and Strategy</h4>
+            <p class="timeline-text">In September 2020, President Xi Jinping announced that China will “aim to have CO2 emissions peak before 2030 and achieve 
+              carbon neutrality before 2060”. Announced 40 years after the country began its remarkable journey towards economic modernisation, this new vision 
+              for China’s future comes amid growing convergence among the world’s major economies on the need to reach net zero emissions globally by mid-century. 
+              But no pledge is as significant as China’s: the country is the world’s largest energy consumer and carbon emitter, accounting for one-third of global 
+              CO2 emissions. The pace of China’s emissions reductions over the coming decades will be important in determining whether the world succeeds in 
+              preventing global warming from exceeding 1.5 °C.</p>
+              <p class="timeline-text" style="font-size: 10px;">Source <a href="https://www.iea.org">IEA</a></p>
           </div>
         </div>
         <div class="swiper-slide" style="background-color: orange;" data-year="India">
-          <div class="swiper-slide-content"><span class="timeline-year">2021</span>
-            <h4 class="timeline-title">Largest green hydrogen plant in India</h4>
-            <p class="timeline-text">by State-owned GAIL to supplement natural gas business with carbon-free fuel</p>
-            <h4 class="timeline-title">Indian Union Budget 2021/22:</h4>
-            <p class="timeline-text">Capital infusion to Solar Energy Corporation of India and Indian Renewable energy Development Agency</p>
-            <p class="timeline-text">To help scale up renewable energy in India</p>
-            <p class="timeline-text">To increase the efficiency of distribution companies</p>
-            <p class="timeline-text">To increase PNG cook stove usage in India</p>
+          <div class="swiper-slide-content"><span class="timeline-year">2020-present</span>
+            <h4 class="timeline-title">Energy for All</h4>
+            <p class="timeline-text">Ensuring Indian citizens have access to electricity and clean cooking has been at the top of the country’s political agenda. 
+              Around 700 million people in India gained access to electricity between 2000 and 2018, reflecting strong and effective policy implementation.
+              The government of India has also made significant progress in reducing the use of traditional biomass in cooking, the chief cause of indoor air 
+              pollution that particularly affects women and children. The government has encouraged clean cooking with liquefied petroleum gas. India continues 
+              to promote cleaner cooking and off-grid electrification solutions, including a shift toward using solar photovoltaics (PV) for cooking and charging 
+              batteries.
+            </p> 
+            <p class="timeline-text" style="font-size: 10px;">Source <a href="https://www.iea.org">IEA</a></p>
           </div>
         </div>
         <div class="swiper-slide" style="background-color: steelblue;" data-year="UK">
-          <div class="swiper-slide-content"><span class="timeline-year">2020</span>
-            <h4 class="timeline-title">Ending public support</h4>
-            <p class="timeline-text">To end public finance support to fossil fuel projects overseas</p>
-            <span class="timeline-year">2021</span>
-            <h4 class="timeline-title">Energy Bills Rebate</h4>
-            <p class="timeline-text">To upgrade homes' energy efficiency, cut down energy bills and create green jobs</p> 
-            <span class="timeline-year">2022</span>
-            <h4 class="timeline-title">£562 million boost to energy efficiency funding</h4>
-            <p class="timeline-text">To mitigate the effects of global gas increases on household bills</p>
-            <h4 class="timeline-title">New programme</h4>
-            <p class="timeline-text">in support of innovative technologies to produce hydrogen from sustainable biomass and waste.</p>
-            <p class="timeline-text">To support the production of clean hydrogen</p>
+          <div class="swiper-slide-content"><span class="timeline-year">2020-present</span>
+            <h4 class="timeline-title">Decarbonisation and Energy</h4>
+            <p class="timeline-text">The United Kingdom is preparing for a deep decarbonisation of its energy system. The country has decided to halve its greenhouse 
+              gas emissions from 1990 to 2027 and to cut them by a total of 80% by 2050. For this to happen, significant private-sector investment in new energy 
+              infrastructure is needed. As it seeks concrete solutions to the low-carbon investment challenge, the United Kingdom is leading by example. The United 
+              Kingdom’s proposed Electricity Market Reform is a pioneering effort that will be closely observed by other countries. Ideally, this complex and 
+              ambitious reform would in the long run lead to a more liberalised marketplace in which low-carbon power generation technologies compete to deliver 
+              innovative and least-cost outcomes. Security of supply remains a key focus of energy policy. Fossil fuel production in the United Kingdom has peaked, 
+              and a fifth of the country’s ageing power generating capacity will have to be closed this decade.</p>
+              <p class="timeline-text" style="font-size: 10px;">Source <a href="https://www.iea.org">IEA</a></p>
           </div>
         </div>
         <div class="swiper-slide" style="background-color: darkcyan;" data-year="US">
-          <div class="swiper-slide-content"><span class="timeline-year">2020</span>
-            <h4 class="timeline-title">Clean Water Act</h4>
-            <p class="timeline-text">rulemaking limiting the power of states to oppose oil and gas pipelines and other energy projects</p>
-            <h4 class="timeline-title">Energy</h4>
-            <p class="timeline-text">Department of Energy intends to launch competitive process to secure 122 million USD for coal products innovation centers that will manufacture carbon-based products from coal</p>
-            <h4 class="timeline-title">Environment</h4>
-            <p class="timeline-text">Executive order waiving environmental reviews of infrastructure projects</p>
+          <div class="swiper-slide-content"><span class="timeline-year">2019</span>
+            <h4 class="timeline-title">Energy Switch</h4>
+            <p class="timeline-text"> The United States has achieved notable reductions in CO2 emissions over the past decade, led by its power sector. Low-cost 
+              shale gas combined with falling costs and policy support for renewables have shifted dependence away from coal-fired generation. Still, closures of 
+              coal and nuclear plants are expected to continue, requiring policy and regulatory responses to ensure a steady transition. Energy security remains a 
+              priority for the United States, which continues to demonstrate a strong focus on reliability and resilience.</p>
+            <p class="timeline-text" style="font-size: 10px;">Source <a href="https://www.iea.org">IEA</a></p>
           </div>
         </div>
        
@@ -604,8 +623,13 @@
 });
 </script>
 
-<div class="text">
+<div class="header">
   <h3 style="font-size: 30px; padding-top: 250px;">End Note</h3> 
+  <p style="font-size: 16px;">Key policy decisions in countries like Germany and UK support green energy transitions- but the cost ultimately rises for the end consumer and not producer. 
+    US on the other hand has seldom recorded sustainable energy related policies in the last few years. The policies in countries like China, and India show 
+    hesitant green commitments- especially after the current political rift. The low carbon footprint transitions energy towards electricity and subsequently 
+    questions where it is coming from? What is its source and how is it distributed? Paramount being, who is going to pay for it?
+  </p>
   <p style="font-size: 16px; padding-bottom: 250px;">Despite the perplexing investment trends and policy engagements- the investments voiced in early 2022
     after the pandemic as well as during the Ukraine war pushes towards production and consumption through sustainable 'self-reliant' sources of energy which 
     readjusts this situation for trends to emerge in the future.
