--- a/Group6.html
+++ b/Group6.html
@@ -394,6 +394,8 @@
         </div>
         <!-- Sunny to here-->
 
+        <!--  *****  -->
+
         <!-- Elika from here-->
         <div class="section">
             <div class="header">
@@ -413,17 +415,9 @@
 
         <div class="section">
             <div class="header">
-            <h3 style="font-size: 30px">Policy Investment by Sector</h3>
-            <p style="font-size: 24px"> in Billion USD</p>
-            <p style="font-size: 14px">Policies are classified by the policy tracker under 'clean conditional' if they state support away from fossil fuels, but are not necessarily specific 
-            regarding the implementation of appropriate sustainable counterparts. 'Clean Unconditional' refers to potentially clean, sustainable policies that are in support of 
-            production or consumption of energy in a low-carbon process having negligible effect on the environment. 'Fossil Condition' are policies that support the production and consumption of 
-            fossil fuels (oil, gas, coal, or fossil fuel based electricity). 'Fossil Unconditional' are policies that support production and consumption of fossil fuels without any 
-            sustainability targets. 'Other Energy' are policies outside the above but falling under an umbrella category (such as nuclear power, uranium mining).</p>
-            <p style="font-size: 16px">The graph displays that investments towards energy has been more in 2020 than the two consecutive years. 
-            Although, 'clean conditional' (individually) shows an upward trend in 2022 and 'other energy' has garnered much investment in 2021; the overall
-            trend is downwards.
-            </p>
+                <h1>Charting the World's rhetoric towards Energy</h1> 
+                <p style="font-size:24px;">This section looks at the trends of policy decisions taken by G20 governments</p>
+                <p style="font-size: 18px;">Capturing essential policies with news reels to follow</p> 
             </div>
         </div>
         
@@ -444,10 +438,8 @@
                 <h3 style="font-size: 30px; padding-top: 0px; line-height: 1.25em;">Key Policies</h3>
                 <p style="font-size: 24px; line-height: 1.25em;">in specific countries</p>
                 <p style="font-size: 16px; line-height: 1.25em;">This policy overview captures a number of policies
-                    in
-                    the countries (Germany, China, India, UK and the US) as they push towards an equitable/
-                    non-equitable energy outlook,
-                    committing to important legislations that attempt to adjust the past narrative
+                    in the countries (Germany, China, India, UK and the US) as they push towards an equitable/
+                    non-equitable energy outlook, committing to important legislations that attempt to adjust the past narrative
                 </p>
             </div>
         </div>
@@ -457,18 +449,19 @@
         <div class="section">
 
             <div class="header">
-                <h3 style="font-size: 30px; padding-top: 150px; line-height: 1.25em;">End Note</h3>
-                <p style="font-size: 16px; padding-bottom: 250px; line-height: 1.25em;">Despite the perplexing
-                    investment trends and policy engagements- the investments voiced in early 2022
-                    after the pandemic as well as during the Ukraine war pushes towards production and consumption
-                    through sustainable 'self-reliant' sources of energy which
-                    readjusts this situation for trends to emerge in the future.
+                <h3 style="font-size: 30px; padding-top: 250px;">End Note</h3> 
+                <p style="font-size: 16px;">Key policy decisions in countries like Germany and UK support green energy transitions- but the cost ultimately rises for the end consumer and not producer. 
+                US on the other hand has seldom recorded sustainable energy related policies in the last few years. The policies in countries like China, and India show hesitant green commitments- especially after the current political rift. The low carbon footprint transitions energy towards electricity and subsequently questions where it is coming from? What is its source and how is it distributed? Paramount being, who is going to pay for it?
+                </p>
+                <p style="font-size: 16px; padding-bottom: 250px;">Despite the perplexing investment trends and policy engagements- the investments voiced in early 2022 after the pandemic as well as during the Ukraine war pushes towards production and consumption through sustainable 'self-reliant' sources of energy which readjusts this situation for trends to emerge in the future.
                 </p>
             </div>
 
         </div>
 
         <!-- Elika to here-->
+
+        <!--  *****  -->
 
 
 
