Relative sizes, trimmed text

--- a/Group6.html
+++ b/Group6.html
@@ -80,7 +80,7 @@
             <h1>Energy Use</h1>
         </div>
         <div class="section">
-            <div class="grid-container" style="display: grid; grid-template-columns: auto auto;padding: 60px;">
+            <div class="grid-container" style="display: grid; grid-template-columns: auto auto;padding: 3%;">
                 <div class="grid-item">
                     <text style="font: 'Lato';font-size: 14px;font-weight: bold;">
                         Cost of getting electricity (cumulative measure of total procedural, temporal, generation and
@@ -126,7 +126,7 @@
             </div>
         </div>
         <div class="section">
-            <div class="grid-container" style="display: grid; grid-template-columns: auto auto;padding: 60px;">
+            <div class="grid-container" style="display: grid; grid-template-columns: auto auto;padding: 3%;">
                 <div class="grid-item">
                     <text style="font: 'Lato';font-size: 14px;font-weight: bold;">
                         Inflation, consumer prices (annual %)
@@ -166,14 +166,8 @@
                             <br>
                             Inflation rates have traditionally been substantially higher for
                             developing economies such as India, relative to more developed
-                            nation states such as the United States and the United Kingdom.
+                            nation states such as the United States and the United Kingdom, though India's inflation rate is now more in line with that of other countries.
                             <br>
-                            <br>
-                            The inflation rate for India (which is characterised as a developing economy) has greatly
-                            reduced and has come closer in
-                            line with that of more developed countries in recent years, this indicates that
-                            affordability of energy supply may be less
-                            affected by energy cost increases, relative to previous years.
                         </text>
                     </div>
                 </div>
