--- a/Group6.html
+++ b/Group6.html
@@ -392,14 +392,14 @@
 
         <div class="section">
             <div class="header">
-                <h1>Charting the World's rhetoric towards Energy</h1> 
+                <h1 style="font-size: 60px;">Charting the World's rhetoric towards Energy</h1> 
                 <p style="font-size:24px;">This section looks at the trends of policy decisions taken by G20 governments</p>
                 <p style="font-size: 18px;">Capturing essential policies with news reels to follow</p> 
             </div>
         </div>
         
         <div class="section">
-            <iframe src="Elika_policytimeline.html" width="100%" height="85%" style="border:none;"></iframe>
+            <iframe src="Elika_policytimeline.html" width="100%" height="95%" style="border:none;"></iframe>
         </div>
 
         <div class="section">
@@ -412,7 +412,7 @@
  
         <div class="section">
             <div class="header">
-                <h3 style="font-size: 30px; padding-top: 0px; line-height: 1.25em;">Key Policies</h3>
+                <h3 style="font-size: 30px; line-height: 1.25em;">Key Policies</h3>
                 <p style="font-size: 24px; line-height: 1.25em;">in specific countries</p>
                 <p style="font-size: 16px; line-height: 1.25em;">This policy overview captures a number of policies
                     in the countries (Germany, China, India, UK and the US) as they push towards an equitable/
@@ -421,12 +421,12 @@
             </div>
         </div>
         <div class="section">
-            <iframe src="Elika_keypolicyswipper.html" width="100%" height="85%" style="border:none;"></iframe>
+            <iframe src="Elika_keypolicyswipper.html" width="100%" height="95%" style="border:none;"></iframe>
         </div>
         <div class="section">
 
             <div class="header">
-                <h3 style="font-size: 30px; padding-top: 250px;">End Note</h3> 
+                <h3 style="font-size: 30px; padding-top: 20px;">End Note</h3> 
                 <p style="font-size: 16px;">Key policy decisions in countries like Germany and UK support green energy transitions- but the cost ultimately rises for the end consumer and not producer. 
                 US on the other hand has seldom recorded sustainable energy related policies in the last few years. The policies in countries like China, and India show hesitant green commitments- especially after the current political rift. The low carbon footprint transitions energy towards electricity and subsequently questions where it is coming from? What is its source and how is it distributed? Paramount being, who is going to pay for it?
                 </p>
