--- a/Elika_investmentfueltype.html
+++ b/Elika_investmentfueltype.html
@@ -6,7 +6,7 @@
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/css/swiper.min.css'>
-  <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800'>
+  <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 
   <script src="echarts.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/5.3.1-rc.1/echarts.min.js"></script>
@@ -16,7 +16,7 @@
       body { 
       margin:0px; 
       padding:0;
-      font-family: Gill Sans, 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif !important; 
+      font-family: 'Lato' !important; 
       color: rgb(56, 54, 54);
       }  
       .text {
