--- a/Elika_investmentsector.html
+++ b/Elika_investmentsector.html
@@ -6,7 +6,7 @@
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/css/swiper.min.css'>
-  <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800'>
+  <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 
   <script src="echarts.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/5.3.1-rc.1/echarts.min.js"></script>
@@ -16,7 +16,7 @@
       body { 
       margin:0px; 
       padding:0;
-      font-family: Gill Sans, 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif !important; 
+      font-family: 'Lato' !important;  
       color: rgb(56, 54, 54);
       } 
       .header{
@@ -33,8 +33,7 @@
       position: relative;  
       float: right; 
       text-align: left; 
-      padding-right: 25px;
-      padding-top: 0px;
+      padding-right: 25px; 
       padding-left: 850px;
       padding-bottom: 0px;
       color: rgb(49, 48, 48); 
@@ -53,10 +52,9 @@
 
 </head>
 <body>
-   
 
   <div class="text">
-    <h3 style="font-size: 30px">Policy Investment by Sector</h3>
+    <h3 style="font-size: 30px; padding-top: 0%;">Policy Investment by Sector</h3>
     <p style="font-size: 24px"> in Billion USD</p>
     <p style="font-size: 14px">Policies are classified by the policy tracker under 'clean conditional' if they state support away from fossil fuels, but are not necessarily specific 
     regarding the implementation of appropriate sustainable counterparts. 'Clean Unconditional' refers to potentially clean, sustainable policies that are in support of 
