--- a/Elika_policytimeline.html
+++ b/Elika_policytimeline.html
@@ -10,6 +10,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 
 <style>
 body { margin: 0; padding: 0; overflow-x: hidden;
@@ -29,7 +30,7 @@ width: 60%;
 #features {
 width: 40%;
 margin-left: 60%;
-font-family: sans-serif;
+font-family: 'Lato' !important; 
 overflow-y: scroll;
 background-color: white;
 color: black; 
