--- a/Elika_investmentsector.html
+++ b/Elika_investmentsector.html
@@ -28,13 +28,13 @@
       padding-bottom: 50px; 
       }
       .text {
-      margin: 100px; 
+      margin: 0px; 
       font-size: 20px;
       position: relative;  
       float: right; 
       text-align: left; 
-      padding-right: 25px; 
-      padding-left: 850px;
+      padding-right: 50px; 
+      padding-left: 900px;
       padding-bottom: 0px;
       color: rgb(49, 48, 48); 
       }    
@@ -46,7 +46,7 @@
       padding-left: 25px;
       width: 800px;
       height: 600px;
-      font-family: Gill Sans, 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
+      font-family: 'Lato';
       }  
 </style>
 
