--- a/index.html
+++ b/index.html
@@ -336,9 +336,7 @@
             </text>
         </div>
         <div class="section">
-            <text>
-                Compare by Year <br> <br>
-            </text>
+            <h1 style="font-size: 60px;">Compare by Year</h1>
             <div id="slider"></div>
             <div id="viz_t"></div>
         </div>
