val text position changes

--- a/index.html
+++ b/index.html
@@ -173,71 +173,46 @@
         <div class="section">
             <div id="energy_mix"></div>
             <text
-                style="text-align:left; font: 'Lato';font-size: 16px; position:absolute; left: 1250px; right:90px; top:320px;">
-                Historically, the UK was heavily reliant on fossil fuel energy. In 1965, the energy mix was heavily
-                dominated by crude oil and coal consumption.
+                style="text-align:left; font: 'Lato';font-size: 16px; position:absolute; left: 72%; right:1%; top:35%;">
+                In 1965, the energy mix was heavily dominated by crude oil and coal consumption.
                 <br> <br>
-                The gradual phasing out of coal consumption has led to increasing reliance on natural gas. However,
-                investment in renewable energy has helped diversify the energy mix in recent years.
+                The gradual phasing out of coal consumption has led to increasing reliance on natural gas.
                 <br> <br>
-                Although nuclear energy has had a consistent contribution to the energy mix, the rapid growth of wind
-                consumption can be explained by the focus of renewable investment in wind infrastructure.
+                However, investment in renewable energy has helped diversify the energy mix in recent years and led to the rapid growth of wind energy consumption.
                 <br> <br>
-                Additionally, through observing the funnelling effect of the plot in more recent years, it’s evident
-                that the overall energy consumption in the UK has slightly reduced since around the year of 2000.
-                <br> <br>
-                A combination of reducing energy consumption and investment in renewable energy technology, has allowed
-                for the rapidly growing contributions by renewable energy. However, the current energy mix is still
-                heavily dominated by oil and gas.
+                Notice the funnelling effect from 2005-2020. This suggests energy consumption has gradually reduced.
             </text>
         </div>
         <div class="section">
             <div id="uk_import_dependency"></div>
             <text
-                style="text-align:left; font: 'Lato';font-size: 16px; position:absolute; left:1250px; right:90px; top:320px;">
-                To understand how susceptible UK energy prices are affected by global events and policies, it’s worth
-                discerning the quantity of the energy mix that is formed of imported energy. That is to say, how
-                self-reliant is the UK when it comes to energy?
+                style="text-align:left; font: 'Lato';font-size: 16px; position:absolute; left:72%; right:1%; top:30%;">
+                How self-reliant is the UK when it comes to energy?
                 <br> <br>
-                Year on year variation of import contributions suggests that imports play an important part in dealing
-                with sudden changes in demand.
+                Year on year variation of import contributions suggests that imports play an important part in dealing with sudden changes in demand.
                 <br> <br>
-                Taking a longer term view, import contributions fluctuate significantly decade to decade. High import
-                reliance in the 1970s switched to the UK becoming a net exporter during the 1980s and 90s due to
-                development in the North Sea.
+                Imports reliance increased at the turn of the century, but through the growth in wind production has begun to decrease again.
                 <br> <br>
-                Imports reliance increased at the turn of the century, but through the growth in wind production has
-                begun to decrease again.
+                Currently, almost 30% of UK energy consumption is imported.
                 <br> <br>
-                Over the last decade, on average 35% of annual energy consumption is formed of imported energy. With
-                such a significant part of the energy mix formed of imports, the UK is affected by international
-                politics, prices and shortages.
+                With such a significant part of the energy mix formed of imports, the UK is affected by international politics, prices and shortages.
             </text>
         </div>
         <div class="section">
             <div id="int_import_dependency"></div>
             <text
-                style="text-align:left; font: 'Lato';font-size: 16px; position:absolute; left:1250px; right:90px; top:320px;">
+                style="text-align:left; font: 'Lato';font-size: 16px; position:absolute; left:72%; right:1%; top:30%;">
                 How does the UK’s import dependency compare to other countries?
                 <br> <br>
-                Considering the last two decades, the UK’s import dependency presents significantly larger variation
-                than the other case study countries. In particular, the UKs switch from a being net exporter to one of
-                the largest energy importers is unique.
+                The UK is in a unique position, transitioning from a major exporter to importer.
                 <br> <br>
-                As established earlier, energy consumption has fallen in recent years. In context, the UK’s increasing
-                reliance on imports until 2013 is peculiar. It suggest that despite energy consumption falling, instead
-                of reducing imports, the UK has reduced internal energy production.
+                Other countries have experienced slower change.
                 <br> <br>
-                India and China demonstrate a progressively rising reliance on imported energy. This is likely due to
-                their rapid economic development with demand outstripping the rate of development of internal energy
-                production infrastructure.
+                The USA has bucked the trend and become a net exporter.
                 <br> <br>
-                Germany has a uniquely high and consistent reliance on imports indicating the dependency the country has
-                on international trends and events. The USA has slowly reduced its import reliance and only recently
-                become a net exporter.
+                Notice Germany’s outstandingly high reliance on imported energy.
                 <br> <br>
-                The UK’s reliance on imported energy is comparatively high against other case study countries, but where
-                does this imported energy come from?
+                The UK’s reliance on imported energy is comparatively high against other case study countries, but where does this imported energy come from?
 
             </text>
         </div>
@@ -245,15 +220,15 @@
             <input type="range" min="2001" max="2020" step="1" value="2020">
             <div id="import-source"></div>
             <text
-                style="text-align:left; font:'Lato'; font-size: 16px; position:absolute; left:800px; top:650px;font-weight: bold;">
+                style="text-align:left; font:'Lato'; font-size: 16px; position:absolute; left:41.5%; top:64.5%;font-weight: bold;">
                 2001
             </text>
             <text
-                style="text-align:left; font: 'Lato';font-size: 16px; position:absolute; left:1090px; top:650px;font-weight: bold;">
+                style="text-align:left; font: 'Lato';font-size: 16px; position:absolute; left:61.5%; top:64.5%;font-weight: bold;">
                 2020
             </text>
             <text
-                style="text-align:middle; font: 'Lato';font-size: 16px; position:absolute; left:250px; right:250px; top:700px;">
+                style="text-align:middle; font: 'Lato';font-size: 16px; position:absolute; left:250px; right:250px; top:70%;">
                 What energy types is the UK importing, and where is it coming from?
                 <br> <br>
                 Since 2001, imported energy types have diversified largely through the growth of dominance of oil
