--- a/index.html
+++ b/index.html
@@ -246,10 +246,7 @@
         <div class="section">
             <div id="main3"></div>
             <text
-                style="text-align:left; font: 'Lato';font-size: 16px; position:absolute; left:1250px; right:60px; top:240px;">
-                When we look at total energy consumption, differences across countries often reflect differences in
-                population size: countries with lots of people inevitably consume more energy than tiny countries.
-                <br> <br>
+                style="text-align:left; font: 'Lato';font-size: 16px; position:absolute; left:80%; right:1%; top:15%;">
                 How do countries compare when we look at energy consumption per person?
                 <br> <br>
                 This interactive chart shows per capita energy consumption. We see vast differences across the world.
@@ -270,22 +267,15 @@
         <div class="section">
             <div id="main4"></div>
             <text
-                style="text-align:left; font: 'Lato';font-size: 16px; position:absolute; left: 1270px; right:40px; top:290px;">
-                Next we focus on four representative countries: the United States, India, the United Kingdom, and China.
-                <br> <br>
+                style="text-align:left; font: 'Lato';font-size: 16px; position:absolute; left: 80%; right:1%; top:15%;">
                 The U.S. average energy use per person remained steady overall during the 1990-2020 period, but there
                 were two more significant decreases in 2004-2012 and after 2018, respectively, and it was found that
                 both decreases were due to industrial upgrading and expanding the use of new energy sources.
                 <br> <br>
-                Although nuclear energy has had a consistent contribution to the energy mix, the rapid growth of wind
-                consumption can be explained by the focus of renewable investment in wind infrastructure.
-                <br> <br>
                 India as a whole shows a smooth upward trend, also with the smooth development of the country.
                 <br> <br>
                 The UK has two decreasing trends overall after 2006, similar to the United States, respectively, after
-                2006-2011 and 2018, for reasons similar to the United States, industrial upgrading, and the expanded use
-                of new energy, where the second decline should be due to the expanded use of new energy after joining
-                the Paris Agreement.
+                2006-2011 and 2018.
                 <br> <br>
                 China has shown a rapid rise in the overall trend during the 30 years, especially after 2002, and the
                 initial exploration may be due to the rapid development of manufacturing after joining the WTO.
