--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     <div id="fullpage">
         <div class="section">
-            <h1>Energy Use</h1>
+            <h1>Why are energy prices rising?</h1>
         </div>
         <div class="section">
             <div class="grid-container" style="display: grid; grid-template-columns: auto auto;padding: 3%;">
@@ -107,13 +107,7 @@
                             <br>
                             <br>
                             After China, the cost of getting electricity is the highest in the United Kingdom (relative
-                            to the other countries in this analysis).
-                            <br>
-                            <br>
-                            The cost of getting electricty in the United Kingdom has reduced in recent years, with
-                            a substantial decrease from 2014 onwards, though it is still higher than that of
-                            certain developed and developing nation states, like the United States and India
-                            respectively.
+                            to the other countries in this analysis), however, this cost has reduced substantially from 2014 onwards.
                             <br>
                             <br>
                         </text>
@@ -142,15 +136,6 @@
                         <text>
                             Inflation is a cost of living indicator as it can be used
                             to assess the impact of increases on the affordability of energy.
-                            <br>
-                            <br>
-                            Higher inflation rates may indicate that energy price increases aren't as substantial as
-                            they may appear to be.
-                            <br>
-                            <br>
-                            Likewise, a low level of inflation, indicates a lower year on year effect of energy price
-                            rises i.e., even if energy prices
-                            increase the affordability of energy may not significantly reduce.
                             <br>
                             <br>
                             Certain developed economies, such as the United States and China witnessed deflation or a
