--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
         new fullpage('#fullpage', {
             //options here
             sectionsColor: [
-                '#F1948A', '#FDEDEC', '#FDEDEC', '#f4f4f4', '#f4f4f4', '#f4f4f4', '#f4f4f4', '#f4f4f4', '#f4f4f4', 'white', 'white', 'white', 'white', 'white', ' ', 'white'
+                '#F1948A', '#f4f4f4', '#f4f4f4', '#f4f4f4', '#f4f4f4', '#f4f4f4', '#f4f4f4', '#f4f4f4', '#f4f4f4', 'white', 'white', 'white', 'white', 'white', ' ', 'white'
             ],
             anchors: [
                 'firstPage', 'secondPage', 'thirdPage', 'fourthPage', 'fifthPage', 'sixthPage', 'seventhPage', 'eighthPage', 'ninthPage', 'sunny1', 'sunny2', 'sunny3', '13thPage', '14thPage', '15thPage', '16thPage', '', '17thPage'],
