--- a/index.html
+++ b/index.html
@@ -276,13 +276,17 @@
         <div class="section">
             <div id="viz_1"></div>
             <text>
-                Decreasing Energy Per GDP indicates decoupling from economic growth. <br> <br>
+                Decreasing Energy Per GDP indicates decoupling from economic growth. <br>
+                Germany, the UK, and the US have experienced decoupling. <br>
+                India's levels are lower likely due to a different extent of industrialisation.<br>
+                China has experienced the most variation, the 2005 peak likely due to joining the World Trade Organisation.  <br>
             </text>
         </div>
         <div class="section">
             <div id="viz_2"></div>
             <text>
-                Increasing use of renewable energy is one driver of decoupling energy use and economic growth. <br> <br>
+                Increasing use of renewable energy is one driver of decoupling energy use and economic growth. <br>
+                Many countries see increasing levels, while the US and India have lower ratios in recent years. <br> <br>
             </text>
         </div>
         <div class="section">
